--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,7 +54,9 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scenes\GameScene.cs" />
-     <Compile Include="Assets\Script\GameCenter.cs" />
+     <Compile Include="Assets\Script\BaseView.cs" />
+     <Compile Include="Assets\Script\lobby.cs" />
+     <Compile Include="Assets\Script\MainView.cs" />
  <Reference Include="UnityEditor.StandardEvents">
  <HintPath>C:/Users/User/Project/SpaceFlight/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
  </Reference>
